src/app/projects-home/projects-home.component.css
@import url(https://fonts.googleapis.com/css?family=Cormorant+Garamond);

*,
*::before,
*::after {
  box-sizing: border-box;
}

button {
  display: block;
  position: relative;
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  text-transform: inherit;
  letter-spacing: inherit;
  text-shadow: inherit;
  cursor: pointer;
  outline: inherit;
  z-index: 10;
}

.clearfix::after {
  content: "";
  clear: both;
  display: table;
}

.big {
  font-size: 150%;
}

p.capitalize::first-letter {
  font-size: 150%;
}

span.capitalize::first-letter {
  font-size: 150%;
}

.med {
  font-size: 100%;
  letter-spacing: 0.5px;
}

.small {
  font-size: 65%;
  letter-spacing: 0.5px;
}

.no-space {
  letter-spacing: 0px;
}

.card {
  background-color: #F4F1EB;
  background-image: url("https://the-software-guild.s3.amaxonaws.com/angular/v1.0-2010/images/paper-fibers.png");
  height: 200px;
  width: 350px;
  margin: 20vh auto 0 auto;
  padding: 10px 10px 10px 10px;
  transform: rotateX(60deg) rotateY(0deg) rotateZ(45deg);
  box-shadow: 0;
  transition:
    transform 0.4s ease,
    box-shadow 0.4s ease;
  font-family: "Cormorant Garamond", serif;
  text-transform: uppercase;
  box-sizing: inherit;
  font-size: 10.5px;
  letter-spacing: 1px;
  text-shadow:
    0 0 2px rgba(0, 0, 0, 0.5),
    -1px -1px 1px rgba(179, 179, 179, 0.5),
    1px 1px 0 rgba(255, 255, 255, 0.55),
    0 1px 3px white;
  overflow: hidden;
  color: #191919;
  background-color: azure;
}

.card:hover {
  cursor: pointer;
  transform: rotateX(60deg) rotateY(0deg) rotateZ(45deg) translateZ(10px);
  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.4);
}

.card:focus {
  transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg) translateZ(10px);
  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.4);
}

.card:focus::before {
  transform: skewX(0deg) translateX(0px) translateY(0px);
  height: 0px;
}

.card:focus::after {
  transform: skewY(0deg) translateX(0px) translateY(0px);
  width: 0px;
}

.card::before,
.card::after {
  content: "";
  position: absolute;
  display: block;
  background-color: grey;
  transition:
    transform 0.4s ease,
    height 0.4s ease,
    width 0.4s ease;
}

.card::before {
  width: 100%;
  height: 6px;
  bottom: 0;
  left: 0;
  transform: skewX(45deg) translateX(-3px) translateY(6px);
}

.card::after {
  height: 100%;
  width: 6px;
  top: 0;
  right: 0;
  transform: skewY(45deg) translateX(6px) translateY(-3px);
}

.row {
  display: block;
  text-align: center;
}

.row:nth-child(2) {
  margin: 40px 0;
}

.left {
  float: left;
}

.right {
  float: right;
}

p {
  margin: 0;
  font-size: 10.5px;
}

span {
  font-size: 15.75px;
}

